# c0ffee

./: .clang-format  CMakeLists.txt  README.md  compile.sh  current_breakpoints.txt  notas.org  notas.txt  pre-commit
source/: bvh.h  collisions.cpp  collisions.h  constants.h  entity_manager.cpp  entity_manager.h  game.cpp  game.h  main.cpp  math.h  maths.h  physics.cpp  physics.h  random.cpp  random.h  renderer.h  sdl_renderer.cpp  types.h
tests/: CMakeLists.txt  test_linear_algebra_operations.cpp  test_matrix3.cpp  test_quaternions.cpp
